--- a/RxTools/build.gradle
+++ b/RxTools/build.gradle
@@ -46,12 +46,23 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    compileOnly 'androidx.core:core-ktx:1.7.0'
+    compileOnly 'androidx.appcompat:appcompat:1.3.0'
+    compileOnly 'com.google.android.material:material:1.4.0'
+    compileOnly 'junit:junit:4.13.2'
+    compileOnly 'androidx.test.ext:junit:1.1.3'
+    compileOnly 'androidx.test.espresso:espresso-core:3.4.0'
+
+    compileOnly 'com.google.code.gson:gson:2.8.5'
+    //compileOnly 'com.squareup.okhttp3:okhttp:3.12.2'
+    //compileOnly 'com.squareup.retrofit2:retrofit:2.5.0'
+
+    compileOnly 'io.reactivex.rxjava2:rxkotlin:2.2.0'
+    //compileOnly 'io.reactivex.rxjava2:rxjava:2.1.12'
+    compileOnly 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    //compileOnly 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 
     //implementation 'org.koin:koin-androidx-viewmodel:1.6.10'
     //noinspection NotInterpolated
