--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id('com.android.application')
+    id("kotlin-android")
+    id("kotlin-kapt")
+    id("kotlin-parcelize")
 }
 
 android {
@@ -53,6 +55,12 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //kotlin
+    //implementation 'io.coil-kt:coil:1.1.0'
+    implementation 'org.koin:koin-androidx-viewmodel:2.2.1'
+    //implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.10'
+    //implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.10'
 
     //implementation 'com.github.CHCHCHEN:RxTools:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
