--- a/RxTools/build.gradle
+++ b/RxTools/build.gradle
@@ -1,10 +1,11 @@
+
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
 ext.koin_version = "2.2.1"
-ext.kotlin_version = '1.6.10'
+ext.kotlin_version = "1.6.10"
 
 android {
     compileSdk 33
@@ -81,8 +82,6 @@ dependencies {
     //沉浸式
     compileOnly 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 
-    //Log日志格式美化包
-    compileOnly 'com.orhanobut:logger:2.2.0'
 
     //压缩与加密
     implementation 'net.lingala.zip4j:zip4j:1.3.2'
@@ -94,6 +93,4 @@ dependencies {
 
     implementation 'org.apache.commons:commons-lang3:3.5'
     implementation 'joda-time:joda-time:2.9.9'
-
-    //implementation 'com.android.support:support-fragment:24.2.0'
 }
