--- a/RxTools/build.gradle
+++ b/RxTools/build.gradle
@@ -36,11 +36,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11.toString()
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
 
@@ -63,9 +63,6 @@ dependencies {
     compileOnly 'com.google.android:flexbox:0.3.2'
     //沉浸式
     compileOnly 'com.readystatesoftware.systembartint:systembartint:1.0.3'
-
-    //Log日志格式美化包
-    compileOnly 'com.orhanobut:logger:2.2.0'
 
     //压缩与加密
     implementation 'net.lingala.zip4j:zip4j:1.3.2'
