--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation project(path: ':RxTools')
+    implementation files('lib/tbs_sdk_thirdapp_v4.3.0.326_44226_20220825_155943.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -64,5 +65,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 
-    implementation 'com.jakewharton:disklrucache:2.0.2'
+    api 'com.jakewharton:disklrucache:2.0.2'
+
+    //kotlin协程
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    implementation 'com.alibaba:fastjson:1.2.61'
+
+    //api 'com.tencent.tbs:tbssdk:44275'
 }
