--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters  "armeabi" , "armeabi-v7a" , "arm64-v8a"
+        }
     }
 
     lintOptions {
@@ -52,7 +56,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation project(path: ':RxTools')
-    implementation files('lib/tbs_sdk_thirdapp_v4.3.0.386_44286_sharewithdownloadwithfile_withoutGame_obfs_20230210_114429.jar')
+    implementation files('lib/tbs_sdk_44226.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -73,5 +77,5 @@ dependencies {
 
     implementation 'com.alibaba:fastjson:1.2.61'
 
-    //api 'com.tencent.tbs:tbssdk:44275'
+    //api 'com.tencent.tbs:tbssdk:43903'
 }
