--- a/RxTools/build.gradle
+++ b/RxTools/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     compileOnly 'androidx.exifinterface:exifinterface:1.3.0'
     compileOnly 'com.google.guava:guava:27.1-jre'
 
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
+
 
     implementation 'org.apache.commons:commons-lang3:3.5'
     implementation 'joda-time:joda-time:2.9.9'
