--- a/RxTools/build.gradle
+++ b/RxTools/build.gradle
@@ -93,4 +93,7 @@ dependencies {
     compileOnly 'com.squareup.retrofit2:retrofit:2.5.0'
     compileOnly 'com.squareup.retrofit2:converter-gson:2.5.0'
     compileOnly 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
 }
