--- a/RxTools/src/main/AndroidManifest.xml
+++ b/RxTools/src/main/AndroidManifest.xml
@@ -5,4 +5,25 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+    <application android:usesCleartextTraffic="true">
+        <service android:name=".appupdate.service.DownloadService" />
+
+        <provider
+            android:name=".appupdate.config.AppUpdateFileProvider"
+            android:authorities="${applicationId}.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/app_update_file" />
+        </provider>
+        <activity
+            android:name=".appupdate.view.UpdateDialogActivity"
+            android:theme="@style/AppUpdate.UpdateDialog" />
+    </application>
 </manifest>
