--- a/RxTools/build.gradle
+++ b/RxTools/build.gradle
@@ -99,4 +99,6 @@ dependencies {
 
     implementation "com.huawei.hms:ads-identifier:3.4.62.300"
     implementation 'com.hihonor.mcs:ads-identifier:1.0.2.301'
+
+    compileOnly "com.alibaba:fastjson:1.2.78"
 }
