--- a/RxTools/build.gradle
+++ b/RxTools/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     compileOnly 'androidx.test.ext:junit:1.1.3'
     compileOnly 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+    compileOnly 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 
     //沉浸式
     compileOnly 'com.readystatesoftware.systembartint:systembartint:1.0.3'
@@ -72,11 +72,11 @@ dependencies {
     compileOnly 'androidx.exifinterface:exifinterface:1.3.0'
     compileOnly 'com.google.guava:guava:27.1-jre'
 
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
+    compileOnly 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
 
 
-    implementation 'org.apache.commons:commons-lang3:3.5'
-    implementation 'joda-time:joda-time:2.9.9'
+    compileOnly 'org.apache.commons:commons-lang3:3.5'
+    compileOnly 'joda-time:joda-time:2.9.9'
 
     //recyclerview包
     compileOnly 'androidx.recyclerview:recyclerview:1.2.1'
@@ -94,11 +94,11 @@ dependencies {
     compileOnly 'com.squareup.retrofit2:converter-gson:2.5.0'
     compileOnly 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
+    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
 
-    implementation "com.huawei.hms:ads-identifier:3.4.62.300"
-    implementation 'com.hihonor.mcs:ads-identifier:1.0.2.301'
+    compileOnly "com.huawei.hms:ads-identifier:3.4.62.300"
+    compileOnly 'com.hihonor.mcs:ads-identifier:1.0.2.301'
 
     compileOnly "com.alibaba:fastjson:1.2.78"
 }
