--- a/RxTools/build.gradle
+++ b/RxTools/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     compileOnly 'androidx.exifinterface:exifinterface:1.3.0'
     compileOnly 'com.google.guava:guava:27.1-jre'
 
-    compileOnly 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
 
 
     compileOnly 'org.apache.commons:commons-lang3:3.5'
@@ -94,8 +94,8 @@ dependencies {
     compileOnly 'com.squareup.retrofit2:converter-gson:2.5.0'
     compileOnly 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
-    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
-    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1"
 
     compileOnly "com.huawei.hms:ads-identifier:3.4.62.300"
     compileOnly 'com.hihonor.mcs:ads-identifier:1.0.2.301'
