--- a/RxTools/build.gradle
+++ b/RxTools/build.gradle
@@ -46,7 +46,7 @@ android {
 
 dependencies {
     compileOnly 'com.android.support:support-fragment:24.2.0'
-
+    implementation 'androidx.appcompat:appcompat:1.4.2'
     compileOnly 'androidx.core:core-ktx:1.7.0'
     compileOnly 'androidx.appcompat:appcompat:1.2.0'
     compileOnly 'com.google.android.material:material:1.4.0'
